FB-16 | Service | Implement find product feature and test in rest api service adapter
